--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="body" style="display: flex;flex-direction: column;background-image: url('images/cinevibes.png');background-repeat: no-repeat;background-attachment: fixed;background-size: cover;align-items: center;">
     <div class="header" style="background-image: url('images/flower_blur_vector_266388.jpg');">
-      <div style="display: flex; flex-direction: column; color: black;justify-content: center;">
+      <div class="barcodeDiv" >
         <b>Whatsapp barcode</b>
         <img class="barcode" src="images/Whatsapp barcoad.jpg" alt="barcode">
       </div>  
